<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/textView"
       android:text="@string/lab_2_gui"
       android:textSize="34sp"
       android:textAlignment="center"

       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_weight="1"
            android:onClick="click_Here"
            android:id="@+id/Click_here_button"
            android:text="@string/click_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <CheckBox
            android:onClick="onCheckChanged"
            android:layout_weight="1"
            android:id="@+id/checkbox"
            android:text="@string/check_this_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/flag"
            android:layout_weight="1"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/on_off_switch"
            android:layout_weight="1"
            android:text="@string/switch_on_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <EditText
        android:id="@+id/editText"
        android:hint="@string/enter_name_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>