<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"

        android:text="@string/lab_2_gui"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:src="@drawable/flag"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="0dp" />


    <Button
        android:id="@+id/Click_here_button"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_weight="1"
        android:onClick="click_Here"
        android:text="@string/click_here"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/on_off_switch"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/switch_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/editText"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/enter_name_here"
        app:layout_constraintTop_toBottomOf="@+id/Click_here_button"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>